# CloudSaver

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  LAUNCH.md  MANIFEST.in  PRIVACY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  cloudsaver.py  index.html  package-lock.json  package.json  playwright.config.js  playwright.frontend.config.js  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tsconfig.json  vite.config.ts  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  desktop-build.yml  release.yml
cloudsaver/: __init__.py  __main__.py  _core_impl.py  advisor.py  analytics.py  audit.py  config.py  core.py  desktop.py  diagnostics.py  duplicates.py  history.py  license.py  media.py  optimize.py  payments.py  provider_adapters.py  provider_registry.py  quarantine.py  reports.py  scan.py  team.py  updater.py  web_server.py
desktop/: README.md
docs/: business-report-template.md  commercial-support.md  comparison.md  install.md  licensing-strategy.md  metrics-snapshot.md  monetization-validation.md  paid-builds.md  pilot-feedback.md  preview-release-readiness.md  privacy-architecture.md  release-notes-v0.1.0-preview.md  release-notes-v1.1.0.md  repository.md  revenue-rollout-plan.md  safety-model.md  screenshots.md  sponsor-tiers.md  sponsorship.md  vc-readiness-100-step-plan.md
docs/architecture/: package-layout.md
docs/assets/: README.md
marketing/: capture.html  index.html  script.js  styles.css
packaging/: README.md  SIGNING.md  cloudsaver-desktop.spec
packaging/flatpak/: io.github.gokulrajanpillai.CloudSaver.yml.template
packaging/homebrew/: cloudsaver.rb.template
packaging/macos/: build.sh  entitlements.plist
packaging/scoop/: cloudsaver.json.template
packaging/winget/: cloudsaver.yaml.template
scripts/: build-sidecar.sh  create-demo-fixture.py  package-desktop-artifact.py  release-smoke.sh  start-cloudsaver.ps1  start-cloudsaver.sh
src/: App.tsx  cloudsaver.py  cloudsaver_desktop.py  cloudsaver_history.py  cloudsaver_web.py  main.tsx  vite-env.d.ts
src-python/: sidecar_main.py
src-python/api/: __init__.py  auth.py  cleanup.py  duplicates.py  gdrive.py  icloud.py  main.py  optimize.py  scan.py  sources.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  menu.rs  tray.rs
src/__tests__/: helpers.tsx  setup.ts  types.ts
src/__tests__/components/: Duplicates.test.tsx  ICloudStateBadge.test.tsx  NavRail.test.tsx  Overview.test.tsx  ProgressBar.test.tsx  Settings.test.tsx  SourceCard.test.tsx
src/__tests__/integration/: api.test.ts
src/__tests__/unit/: browser-compat.test.ts  format.test.ts  platform.test.ts  store.test.ts  useApi.test.ts  useGoogleAuth.test.ts  useScanSocket.test.ts
src/components/: CommandPalette.tsx  CredentialInventory.tsx  FirstRunOnboarding.tsx  ICloudStateBadge.tsx  MaturityBadge.tsx  NavRail.tsx  ProductContract.tsx  ProgressBar.tsx  ProviderCapabilityMatrix.tsx  ProviderLimitations.tsx  SourceCard.tsx  TauriProvider.tsx  TitleBar.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  progress.tsx  select.tsx  skeleton.tsx  tabs.tsx  toast.tsx  tooltip.tsx
src/hooks/: useApi.ts  useGoogleAuth.ts  useScanSocket.ts
src/lib/: browser-compat.ts  demo.ts  format.ts  keyring.ts  outbound-consent.ts  platform.ts  product-contract.ts  provider-capabilities.ts  provider-limitations.ts
src/store/: index.ts
src/styles/: globals.css  tokens.css
src/types/: index.ts
src/views/: Cleanup.tsx  Duplicates.tsx  Overview.tsx  Settings.tsx  Sources.tsx  StorageMap.tsx  TrustCenter.tsx
tests/: test_advisor.py  test_analytics.py  test_api_scan.py  test_cloudsaver.py  test_config.py  test_license.py  test_marketing.py  test_payments.py  test_team.py  test_updater.py  test_upgrade_triggers.py  test_virtual_table.py  test_web_integration.py
tests/e2e/: theme.spec.js
tests/e2e/frontend/: demo-mode.spec.ts  navigation.spec.ts  smoke.spec.ts  theme.spec.ts
web/: app.js  index.html  styles.css
