[metadata]
name = cloudsaver
version = 1.0.0
description = Open-source, local-first storage audit and safe optimization tool.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Gokul Rajan
url = https://github.com/gokulrajanpillai/CloudSaver
project_urls =
    Issues = https://github.com/gokulrajanpillai/CloudSaver/issues
    Sponsors = https://github.com/sponsors/gokulrajanpillai
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pillow==12.2.0

[options.packages.find]
include =
    cloudsaver*
    src*

[options.entry_points]
console_scripts =
    cloudsaver = cloudsaver.core:main
    cloudsaver-web = cloudsaver.web_server:main
    cloudsaver-desktop = cloudsaver.desktop:main

[options.extras_require]
dev =
    pytest==8.4.1
desktop =
    pywebview==5.4
release =
    pyinstaller==6.17.0
