[package]
name = "cloudsaver"
version = "1.1.0"
description = "CloudSaver desktop shell"
authors = ["Gokul Rajan"]
edition = "2021"

[lib]
name = "cloudsaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cloudsaver"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-keyring = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
